--- a/Modacity/Modacity/ViewController/Practice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/Practice/practice.storyboard
@@ -370,7 +370,7 @@
                                     <constraint firstItem="8ll-Vj-WDT" firstAttribute="top" secondItem="Ile-As-UGf" secondAttribute="top" id="utZ-ad-afF"/>
                                 </constraints>
                             </view>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iGP-Iw-poe">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iGP-Iw-poe">
                                 <rect key="frame" x="282.5" y="120" width="32" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="32" id="r7T-FM-olY"/>
@@ -605,7 +605,7 @@
                                 <rect key="frame" x="0.0" y="331" width="375" height="336"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ffc-rl-i64" userLabel="Hide Button">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <rect key="frame" x="120" y="0.0" width="135" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="aay-U3-ooA"/>
                                         </constraints>
@@ -675,7 +675,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v9R-tV-PtL" userLabel="IncreaseOctave">
-                                                                <rect key="frame" x="17.5" y="37" width="30" height="30"/>
+                                                                <rect key="frame" x="23.5" y="40" width="24" height="24"/>
                                                                 <state key="normal" image="icon_plus"/>
                                                                 <connections>
                                                                     <action selector="onChangeBPMStop:" destination="ruu-CR-fPU" eventType="touchUpOutside" id="FeX-Er-sQf"/>
@@ -817,7 +817,7 @@
                                                 <rect key="frame" x="0.0" y="130" width="110" height="40"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pbk-YQ-cVe" userLabel="IncreaseBPM">
-                                                        <rect key="frame" x="7" y="4.5" width="30" height="30"/>
+                                                        <rect key="frame" x="13" y="7.5" width="24" height="24"/>
                                                         <state key="normal" image="icon_plus"/>
                                                         <connections>
                                                             <action selector="onChangeBPMStop:" destination="ruu-CR-fPU" eventType="touchUpOutside" id="J5l-pP-nUf"/>
@@ -976,11 +976,11 @@
                                     <constraint firstItem="Ag5-F4-hch" firstAttribute="centerX" secondItem="U1r-XY-SBh" secondAttribute="centerX" id="4tN-Dm-oDx"/>
                                     <constraint firstItem="cpl-Rd-z0P" firstAttribute="top" secondItem="nHf-GH-hRo" secondAttribute="top" constant="5" id="7C9-DP-fsg"/>
                                     <constraint firstItem="V1m-zz-BJU" firstAttribute="top" secondItem="U1r-XY-SBh" secondAttribute="top" id="CNT-KN-faQ"/>
-                                    <constraint firstItem="ffc-rl-i64" firstAttribute="leading" secondItem="U1r-XY-SBh" secondAttribute="leading" id="DDV-n6-OaR"/>
+                                    <constraint firstItem="ffc-rl-i64" firstAttribute="leading" secondItem="U1r-XY-SBh" secondAttribute="leading" constant="120" id="DDV-n6-OaR"/>
                                     <constraint firstItem="Ag5-F4-hch" firstAttribute="top" secondItem="U1r-XY-SBh" secondAttribute="top" constant="8" id="FZ4-y5-c3l"/>
                                     <constraint firstItem="V1m-zz-BJU" firstAttribute="leading" secondItem="U1r-XY-SBh" secondAttribute="leading" id="FdN-9a-fqp"/>
                                     <constraint firstAttribute="trailing" secondItem="V1m-zz-BJU" secondAttribute="trailing" id="GKv-np-8h8"/>
-                                    <constraint firstAttribute="trailing" secondItem="ffc-rl-i64" secondAttribute="trailing" id="Sdi-GT-GJh"/>
+                                    <constraint firstAttribute="trailing" secondItem="ffc-rl-i64" secondAttribute="trailing" constant="120" id="Sdi-GT-GJh"/>
                                     <constraint firstItem="vlS-K1-vrr" firstAttribute="leading" secondItem="U1r-XY-SBh" secondAttribute="leading" constant="14" id="TEb-Ni-MW8"/>
                                     <constraint firstAttribute="bottom" secondItem="V1m-zz-BJU" secondAttribute="bottom" id="VuK-xk-Ziv"/>
                                     <constraint firstItem="cpl-Rd-z0P" firstAttribute="leading" secondItem="nHf-GH-hRo" secondAttribute="trailing" constant="14" id="XTd-BR-7t7"/>
@@ -1142,14 +1142,14 @@ You can tap timer to pause your session.</string>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Slm-tj-hhU">
                                 <rect key="frame" x="67" y="237.5" width="240" height="212"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate your mastery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjk-5K-vbm">
-                                        <rect key="frame" x="72.5" y="0.0" width="96" height="14"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate Your Mastery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjk-5K-vbm">
+                                        <rect key="frame" x="71.5" y="0.0" width="97" height="14"/>
                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How did it go?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f0n-45-xgb">
-                                        <rect key="frame" x="37" y="19" width="167" height="34"/>
+                                        <rect key="frame" x="36.5" y="19" width="167" height="34"/>
                                         <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="28"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -1270,7 +1270,7 @@ You can tap timer to pause your session.</string>
         <image name="icon_note_4" width="44" height="32"/>
         <image name="icon_pause_white" width="17" height="20"/>
         <image name="icon_play" width="28" height="30"/>
-        <image name="icon_plus" width="30" height="30"/>
+        <image name="icon_plus" width="24" height="24"/>
         <image name="icon_save_record" width="15" height="19"/>
         <image name="icon_to_first" width="19" height="19"/>
         <image name="img_btn_logo" width="33" height="32"/>
